--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Shubham Garg
 email: me@shubhamgarg.net
 description: > # this means to ignore newlines until "baseurl:"
-  My blog posts about stuff in general :)
+  My blog, my stuff!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://shubhamgarg.net" # the base hostname & protocol for your site
 twitter_username: shubham15
